--- a/TASK 5/SALES_PREDICTION.ipynb
+++ b/TASK 5/SALES_PREDICTION.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### SALES PREDICTION USING PYTHON\n",
     "\n",
-    "### DHRUPAD CHA"
+    "### KUSHAGRADHI BHOWMICK"
    ]
   },
   {
